Added documentation and changed how notifications are processed.

--- a/upload_safecast.ini
+++ b/upload_safecast.ini
@@ -1,5 +1,20 @@
+#
+# APIKEY can be found by logging into https://api.safecast.org, navigating to
+#   Dashboard from the left menu, and drilling into 'Retrieve your API key'.
+#
+# USERID can be found by logging into https://api.safecast.org, navigating to
+#   Users from the left menu, and filtering to yourself.  ID is USERID.
+#
+# VOLUME is the disk volume name of your bGeigie SD card.  This is used by
+#   upload_safecast to only attempt processing when the bGeigie SD card is
+#   mounted.
+#
+# LOCATION and CREDITS are optional.  The rest are required.
+#
+
 [common]
 APIKEY   = XXXXXXXXXXXXXXXXXXXX
+USERID   = 539
+VOLUME   = BGEIGIEXXXX
 LOCATION = Unknown
 CREDITS  = Satoshi Smith
-VOLUME   = BGEIGIEXXXX
